--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -95,3 +95,4 @@ exclude_paths:
 - assets/css/font-awesome
 - libs/kontiki/classes/Session.php
 - libs/a11yc/resources/ietf_langs.php
+- libs/a11yc/languages
